src/objects/Caliber_Note__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Caliber Notes</relationshipLabel>
        <relationshipName>Caliber_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_QC_Feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is Checked that indicates that this note is QC feedback.</description>
        <label>Is QC Feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_Content__c</fullName>
        <label>Note Content</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note_Type__c</fullName>
        <label>Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trainee</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>QC Trainee</fullName>
                </value>
                <value>
                    <fullName>QC Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QC_Status__c</fullName>
        <label>QC Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undefined</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Superstar</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>Caliber Notes</relationshipLabel>
        <relationshipName>Caliber_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <label>Week Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Caliber Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Training__c</columns>
        <columns>Contact__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Training__c</field>
            <operation>equals</operation>
            <value>TRNG-00000008</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Note-{0000000}</displayFormat>
        <label>Caliber Note Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Caliber Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>